[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "upcl"
version = "0.1.0"
description = "Unified Probabilistic Context Layer: reproducibility material for uncertainty-aware context-aware recommendation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
]

[project.optional-dependencies]
plots = ["matplotlib>=3.7"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["upcl*"]
